--- a/Organization/Backlog.ipynb
+++ b/Organization/Backlog.ipynb
@@ -10,6 +10,14 @@
    },
    "source": [
     "Milestones\n",
+    " * Data visualization\n",
+    "    * Histograms\n",
+    " * Preprocess images:\n",
+    "    * Filering\n",
+    "        * Try out different filtering methods (linear and non-linear filtering)\n",
+    "    * Image clipping\n",
+    "    * Edge detection\n",
+    "    * Create higher contrast\n",
     " * Implement seeded region growing algorithm\n",
     "    * Automatic seed detection algorithm\n",
     "    * Region growing algorithm\n",
@@ -20,12 +28,6 @@
     "        * vary tresholds\n",
     "        * consider different criteria (similarity, size, both)\n",
     " * Implement unseeded region growing algorithm\n",
-    " * Preprocess images:\n",
-    "    * Filering\n",
-    "        * Try out different filtering methods (linear and non-linear filtering)\n",
-    "    * Image clipping\n",
-    "    * Edge detection\n",
-    "    * Create higher contrast\n",
     " * Expand algorithm to hyprid methods\n",
     " * Compare seeded and unseeded region growing\n",
     " * Compare with other algorithms\n",
@@ -33,7 +35,7 @@
     "    * assess which method works best on which kind of image\n",
     "    * JSEG algorithm\n",
     "    * segmentation algorithm (Fan et al.)\n",
-    "  * Accuracy tests\n",
+    "  * Performance measure: Accuracy tests\n",
     "    * Dice score\n",
     "    * Apply other accuracy tests\n",
     "    * Compare\n",
