--- a/Organization/Backlog.ipynb
+++ b/Organization/Backlog.ipynb
@@ -14,7 +14,10 @@
     "    * Histograms\n",
     " * Preprocess images:\n",
     "    * Filering\n",
-    "        * Try out different filtering methods (linear and non-linear filtering)\n",
+    "        * Try out different filtering methods\n",
+    "            * linear and non-linear filtering\n",
+    "            * median filter\n",
+    "            * anisotropic filtering\n",
     "    * Image clipping\n",
     "    * Edge detection\n",
     "    * Create higher contrast\n",
@@ -39,6 +42,7 @@
     "    * Dice score\n",
     "    * Apply other accuracy tests\n",
     "    * Compare\n",
+    "  * Evaluate collected results\n",
     "\n"
    ]
   }
