--- a/Organization/Questions.ipynb
+++ b/Organization/Questions.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
-   "outputs": [],
    "source": [
     "Questions\n",
     "1) Was genau müssen wir mit .gitignore machen?\n",
