Questions.ipynb geordnete Liste

--- a/Organization/Questions.ipynb
+++ b/Organization/Questions.ipynb
@@ -10,11 +10,12 @@
    },
    "source": [
     "Questions\n",
-    "1) Was genau müssen wir mit .gitignore machen?\n",
-    "2) Wo ist das Template für die Fragen?\n",
-    "3) Was ist bei den Daten gt und img?\n",
-    "4) Ist das Bild auf schwarz-weiß runtergebrochen oder wurde ein spezielles Farbschema verwendet?\n",
-    "5) Was ist der Dice score?\n"
+    "\n",
+    "1.  Was genau müssen wir mit .gitignore machen?\n",
+    "2. Wo ist das Template für die Fragen?\n",
+    "3. Was ist bei den Daten gt und img?\n",
+    "4. Ist das Bild auf schwarz-weiß runtergebrochen oder wurde ein spezielles Farbschema verwendet?\n",
+    "5. Was ist der Dice score?\n"
    ]
   }
  ],
