Added some details

--- a/Organization/Backlog.ipynb
+++ b/Organization/Backlog.ipynb
@@ -21,19 +21,19 @@
     " * Implement seeded region growing algorithm\n",
     "    * Automatic seed detection algorithm\n",
     "    * Region growing algorithm\n",
-    "        * try out different distancing methods\n",
+    "        * try out different distancing methods (relative Euclidean distance, difference of region and pixle)\n",
     "        * try out different tresholds\n",
     "        * try out method with 4 or 8 neighbours\n",
     "    * Region merging algorithm\n",
     "        * vary tresholds\n",
     "        * consider different criteria (similarity, size, both)\n",
     " * Implement unseeded region growing algorithm\n",
-    " * Expand algorithm to hyprid methods\n",
+    " * Expand algorithm to other hyprid methods\n",
     " * Compare seeded and unseeded region growing\n",
     " * Compare with other algorithms\n",
-    "    * Trasholding (exchange with other groups)\n",
+    "    * Tresholding (exchange with other groups)\n",
     "    * assess which method works best on which kind of image\n",
-    "    * JSEG algorithm\n",
+    "    * JSEG algorithm (paper 1)\n",
     "    * segmentation algorithm (Fan et al.)\n",
     "  * Performance measure: Accuracy tests\n",
     "    * Dice score\n",
