Added some details to questions

--- a/Organization/Questions.ipynb
+++ b/Organization/Questions.ipynb
@@ -15,7 +15,10 @@
     "2. Wo ist das Template für die Fragen?\n",
     "3. Was ist bei den Daten gt und img?\n",
     "4. Ist das Bild auf schwarz-weiß runtergebrochen oder wurde ein spezielles Farbschema verwendet?\n",
-    "5. Was ist der Dice score?\n"
+    "   Müssen wir das beachten?\n",
+    "5. Was ist der Dice score? -> Vergleich zwischen 2 Sets, welche Sets sollen verglichen werden?\n",
+    "6. Environment anlegen? Warum und Wie?\n",
+    "\n"
    ]
   }
  ],
