Added some details to questions and backlog

--- a/Organization/Questions.ipynb
+++ b/Organization/Questions.ipynb
@@ -18,7 +18,9 @@
     "   Müssen wir das beachten?\n",
     "5. Was ist der Dice score? -> Vergleich zwischen 2 Sets, welche Sets sollen verglichen werden?\n",
     "6. Environment anlegen? Warum und Wie?\n",
-    "\n"
+    "7. Sollen wir auf die hochgeladenen Daten beim Programmieren zugreifen oder auf dei lokal gespeicherten?\n",
+    "   Wie greifen wir auf die hochgeladenen Daten auf Github zu beim programmieren?\n",
+    "8. 1 Paper über Code verschnellern: wir haben keine nötige Hardware?\n"
    ]
   }
  ],
