--- a/Organization/Backlog.ipynb
+++ b/Organization/Backlog.ipynb
@@ -31,6 +31,7 @@
     "        * vary tresholds\n",
     "        * consider different criteria (similarity, size, both)\n",
     " * Implement unseeded region growing algorithm\n",
+    "    * anisotropic filter\n",
     " * Expand algorithm to other hyprid methods\n",
     " * Compare seeded and unseeded region growing\n",
     " * Compare with other algorithms\n",
