Nur rum probiert

--- a/Organization/Backlog.ipynb
+++ b/Organization/Backlog.ipynb
@@ -13,7 +13,7 @@
     " * Data visualization\n",
     "    * Histograms\n",
     " * Preprocess images:\n",
-    "    * Filering\n",
+    "    * Filtering\n",
     "        * Try out different filtering methods\n",
     "            * linear and non-linear filtering\n",
     "            * median filter\n",
