--- a/Organization/Backlog.ipynb
+++ b/Organization/Backlog.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "Milestones\n",
+    "## Milestones\n",
     " * Data visualization\n",
     "    * Histograms\n",
     " * Preprocess images:\n",
@@ -35,7 +35,6 @@
     " * Compare seeded and unseeded region growing\n",
     " * Compare with other algorithms\n",
     "    * Tresholding (exchange with other groups)\n",
-    "    * assess which method works best on which kind of image\n",
     "    * JSEG algorithm (paper 1)\n",
     "    * segmentation algorithm (Fan et al.)\n",
     "  * Performance measure: Accuracy tests\n",
@@ -43,7 +42,9 @@
     "    * Apply other accuracy tests\n",
     "    * Compare\n",
     "  * Evaluate collected results\n",
-    "\n"
+    "    * assess which method works best on which kind of image\n",
+    "\n",
+    "## First sprint\n"
    ]
   }
  ],
