--- a/TestIna.ipynb
+++ b/TestIna.ipynb
@@ -15,10 +15,9 @@
     "\n",
     "img = sk.imread(\"Data/N2DH-GOWT1/img/t01.tif\") #Versuch Bild zu laden\n",
     "imshow(img, \"gray\")\n",
-    "colorbar()\n",
-    "\n"
+    "colorbar()\n"
    ],
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -35,14 +34,6 @@
       "C:\\Users\\marie\\anaconda3\\lib\\site-packages\\skimage\\external\\tifffile\\tifffile.py:2618: RuntimeWarning: py_decodelzw encountered unexpected end of stream\n",
       "  strip = decompress(strip)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "<matplotlib.colorbar.Colorbar at 0x1fb992c6208>"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
