--- a/Organization/Questions.ipynb
+++ b/Organization/Questions.ipynb
@@ -20,7 +20,8 @@
     "6. Environment anlegen? Warum und Wie?\n",
     "7. Sollen wir auf die hochgeladenen Daten beim Programmieren zugreifen oder auf dei lokal gespeicherten?\n",
     "   Wie greifen wir auf die hochgeladenen Daten auf Github zu beim programmieren?\n",
-    "8. 1 Paper über Code verschnellern: wir haben keine nötige Hardware?\n"
+    "8. 1 Paper über Code verschnellern: wir haben keine nötige Hardware?\n",
+    "9. Welche Ergebnisse der Bildanalyse brauchen wir für die Präsentation am 12.05.?\n"
    ]
   }
  ],
