Frage hinzugefügt & Histogramm bei TestIna

--- a/Organization/Questions.ipynb
+++ b/Organization/Questions.ipynb
@@ -21,7 +21,9 @@
     "7. Sollen wir auf die hochgeladenen Daten beim Programmieren zugreifen oder auf dei lokal gespeicherten?\n",
     "   Wie greifen wir auf die hochgeladenen Daten auf Github zu beim programmieren?\n",
     "8. 1 Paper über Code verschnellern: wir haben keine nötige Hardware?\n",
-    "9. Welche Ergebnisse der Bildanalyse brauchen wir für die Präsentation am 12.05.?\n"
+    "9. Welche Ergebnisse der Bildanalyse brauchen wir für die Präsentation am 12.05.?\n",
+    "10. Sind auf den Bildern immer nur der Zellkern angefärbt, oder die gesamte Zelle und wir müssen darin den Zellkern identifizieren?\n",
+    "\n"
    ]
   }
  ],
