--- a/Organization/Questions.ipynb
+++ b/Organization/Questions.ipynb
@@ -20,7 +20,10 @@
     "6. Environment anlegen? Warum und Wie?\n",
     "7. Sollen wir auf die hochgeladenen Daten beim Programmieren zugreifen oder auf dei lokal gespeicherten?\n",
     "   Wie greifen wir auf die hochgeladenen Daten auf Github zu beim programmieren?\n",
-    "8. 1 Paper über Code verschnellern: wir haben keine nötige Hardware?\n"
+    "8. 1 Paper über Code verschnellern: wir haben keine nötige Hardware?\n",
+    "9. Können wir ein kleineres Bild zum Ausprobieren verwenden? (Zu lange Rechenzeiten für große Biler)\n",
+    "10. Treshold Bestimmung über Otsu-Method?\n",
+    "11. Methoden in anderes Markdown importieren?"
    ]
   }
  ],
