--- a/Organization/Questions.ipynb
+++ b/Organization/Questions.ipynb
@@ -23,10 +23,10 @@
     "8. 1 Paper über Code verschnellern: wir haben keine nötige Hardware?\n",
     "9. Können wir ein kleineres Bild zum Ausprobieren verwenden? (Zu lange Rechenzeiten für große Biler)\n",
     "10. Treshold Bestimmung über Otsu-Method?\n",
-    "11. Methoden in anderes Markdown importieren?"
+    "11. Methoden in anderes Markdown importieren?\n",
     "12. Welche Ergebnisse der Bildanalyse brauchen wir für die Präsentation am 12.05.?\n",
     "13. Sind auf den Bildern immer nur der Zellkern angefärbt, oder die gesamte Zelle und wir müssen darin den Zellkern identifizieren?\n",
-    "\n"
+    "14. Wie lesen wir am besten mehrere Bilder ein?"
    ]
   }
  ],
