--- a/Organization/Questions.ipynb
+++ b/Organization/Questions.ipynb
@@ -24,7 +24,9 @@
     "+ Methoden in anderes Markdown importieren?\n",
     "+ Welche Ergebnisse der Bildanalyse brauchen wir für die Präsentation am 12.05.?\n",
     "+ Sind auf den Bildern immer nur der Zellkern angefärbt, oder die gesamte Zelle und wir müssen darin den Zellkern identifizieren?\n",
-    "+ Wie lesen wir am besten mehrere Bilder ein?"
+    "+ Wie lesen wir am besten mehrere Bilder ein?\n",
+    "+ Warum sich im Code Sachen rot unterwellt und wie bekommt man das weg?\n",
+    "+ Wie kann man Bildpfade automatisch einlesen?"
    ]
   }
  ],
