Mehrere Bilder einlesen

--- a/TestMArie.ipynb
+++ b/TestMArie.ipynb
@@ -52,6 +52,32 @@
     "imshow(img, \"gray\")\n",
     "colorbar()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Data/N2DH-GOWT1/img/t01.tif', 'Data/N2DH-GOWT1/img/t21.tif', 'Data/N2DH-GOWT1/img/t31.tif', 'Data/N2DH-GOWT1/img/t39.tif', 'Data/N2DH-GOWT1/img/t52.tif', 'Data/N2DH-GOWT1/img/t72.tif']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "pathlist = [\"Data/N2DH-GOWT1/img/t01.tif\", \"Data/N2DH-GOWT1/img/t21.tif\", \"Data/N2DH-GOWT1/img/t31.tif\", \"Data/N2DH-GOWT1/img/t39.tif\",\"Data/N2DH-GOWT1/img/t52.tif\",\"Data/N2DH-GOWT1/img/t72.tif\"]\n",
+    "img_l = sk.imread_collection(pathlist)\n",
+    "print(img_l)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
