--- a/standardfunctions.ipynb
+++ b/standardfunctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
     "\n",
     "img = sk.imread(\"Data/N2DH-GOWT1/img/t01.tif\") #Versuch Bild zu laden\n",
     "\n",
-    "def show_image(img, x, y):\n",
+    "def show_image(img, x, y): # Funktion um Bilder schneller schön anzuzeigen\n",
     "    figure(figsize=(x,y))\n",
     "    imshow(img, \"gray\")\n",
     "    colorbar()\n",
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "def standarddeviation(img, size): # Größe der Filtermaske, Seitenlänge\n",
+    "def standarddeviation(img, size): # Größe der Filtermaske, Seitenlänge, Standardabweichung\n",
     "    result = numpy.zeros(img.shape) # Resultat-Bild gleich groß wie Eingangs-Bild\n",
     "    n = (size - 1) // 2\n",
     "    for p in ndindex(img.shape): # gibt für jedes Pizel ein Tupel mit (Reihe, Spalte)\n",
@@ -72,13 +72,13 @@
     "                i = p[0]-n + q[0]\n",
     "                j = p[1]-n + q[1]\n",
     "                neighborhood_sum += img[i,j]\n",
-    "            mean = neighborhood_sum/(size**2)\n",
+    "            mean = neighborhood_sum/(size**2) # Im 3x3 Raster werden die Werte addiert und der Mittelwert gebildet\n",
     "            for q in ndindex(size, size):\n",
     "                i = p[0]-n + q[0]\n",
     "                j = p[1]-n + q[1]\n",
-    "                deviation += (img[i,j] - mean)**2\n",
+    "                deviation += (img[i,j] - mean)**2 # Die Abweichung der Werte zum Mittelwert wird berechnet und aufsummiert\n",
     "\n",
-    "            result[p] = sqrt(1/(size**2) * deviation)\n",
+    "            result[p] = sqrt(1/(size**2) * deviation) # Letzter Schritt zur Berechnung der Standardabweichung\n",
     "    return result\n",
     "sd_test = standarddeviation(img,3)"
    ],
@@ -175,18 +175,18 @@
     }
    ],
    "source": [
-    "def euclidean_relative(img, size): # Größe der Filtermaske, Seitenlänge\n",
+    "def euclidean_relative(img, size): # Größe der Filtermaske, Seitenlänge, Relative Euclidische Distanz\n",
     "    result = numpy.zeros(img.shape) # Resultat-Bild gleich groß wie Eingangs-Bild\n",
     "    n = (size - 1) // 2\n",
     "    for p in ndindex(img.shape): # gibt für jedes Pizel ein Tupel mit (Reihe, Spalte)\n",
-    "        neighborhood_distance = []\n",
+    "        neighborhood_distance = [] # Distanzen der Nachbaren werden als Liste gespeichert\n",
     "        if p[0]-n >= 0 and p[1]-n >= 0 and p[0]+n <= img.shape[0] -1 and p[1]+n <= img.shape[1] -1: # Keine Randpixel\n",
     "            for q in ndindex(size, size):\n",
     "                i = p[0]-n + q[0]\n",
     "                j = p[1]-n + q[1]\n",
-    "                neighborhood_distance.append(sqrt((img[p]-img[i,j])**2)/img[p])\n",
+    "                neighborhood_distance.append(sqrt((img[p]-img[i,j])**2)/img[p]) # die Relative Euclidische Distanz wird für jeden Nachbar in die Liste gespeichert\n",
     "\n",
-    "            result[p] = max(neighborhood_distance)\n",
+    "            result[p] = max(neighborhood_distance) # die maximale Distanz wird ausgewählt\n",
     "    return result\n",
     "\n",
     "eurel_test = euclidean_relative(img, 3)\n",
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "def euclidean_n(img, size): # Größe der Filtermaske, Seitenlänge\n",
+    "def euclidean_n(img, size): # Größe der Filtermaske, Seitenlänge, Euclidische Distanz\n",
     "    result = numpy.zeros(img.shape) # Resultat-Bild gleich groß wie Eingangs-Bild\n",
     "    n = (size - 1) // 2\n",
     "    for p in ndindex(img.shape): # gibt für jedes Pizel ein Tupel mit (Reihe, Spalte)\n",
@@ -232,8 +232,8 @@
     "            for q in ndindex(size, size):\n",
     "                i = p[0]-n + q[0]\n",
     "                j = p[1]-n + q[1]\n",
-    "                neighborhood_distance.append(sqrt((img[p]-img[i,j])**2))\n",
-    "\n",
+    "                neighborhood_distance.append(sqrt((img[p]-img[i,j])**2)) # Euclidische Distanz wird gespeichert\n",
+    "                #kann man hier nicht das sqrt und **2 rausnehmen?\n",
     "            result[p] = max(neighborhood_distance)\n",
     "    return result\n",
     "\n",
@@ -269,8 +269,8 @@
     "def seeds_test(img):\n",
     "    result = numpy.zeros(img.shape)\n",
     "    for p in ndindex(img.shape): # Ränder haben den Wert 0\n",
-    "        if similarity[p] > T1 and eurel_test[p] < T2:\n",
-    "            result[p] = 1\n",
+    "        if similarity[p] > T1 and eurel_test[p] < T2: # Theorie aus Paper 1\n",
+    "            result[p] = 1 # Pixel die als Seed in Frage kommen sind weiß, der Rest ist schwarz\n",
     "    return result\n",
     "\n",
     "seed_t = seeds_test(img)\n",
@@ -311,15 +311,15 @@
     }
    ],
    "source": [
-    "def seeds(img, T1, T2):\n",
+    "def seeds(img, T1, T2): # Seed Funktion, so dass man später gut auf die anderen Funktionen zugreifen kann\n",
     "    result = numpy.zeros(img.shape)\n",
-    "    sd_seeds = standarddeviation(img,3)\n",
-    "    sd_flat = sd_seeds.flatten()\n",
-    "    similarity_seeds = 1 - sd_seeds/max(sd_flat)\n",
-    "    eurel_seeds = euclidean_relative(img, 3)\n",
+    "    sd_seeds = standarddeviation(img,3) # Standardabweichung\n",
+    "    sd_flat = sd_seeds.flatten() # Standardabweichung als array\n",
+    "    similarity_seeds = 1 - sd_seeds/max(sd_flat) # Similarity berechnet\n",
+    "    eurel_seeds = euclidean_relative(img, 3) # Euclidische Distanz\n",
     "    for p in ndindex(img.shape): # Ränder haben den Wert 0\n",
     "        if similarity_seeds[p] > T1 and eurel_seeds[p] < T2:\n",
-    "            result[p] = 1\n",
+    "            result[p] = 1 # Wenn beide Bedingungen zutreffen, kommt Pixel als Seed infrage\n",
     "    return result\n",
     "\n",
     "seed_final = seeds(img, 0.4, 20)\n",
