--- a/Test Laura.ipynb
+++ b/Test Laura.ipynb
@@ -159,12 +159,24 @@
     "import skimage.io\n",
     "\n",
     "img2 = skimage.io.imread(\"Data/N2DH-GOWT1/img/t01.tif\")\n",
-    "imshow(img2, \"gray\")\n"
+    "imshow(img2, \"gray\")"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Test Laura\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
