--- a/TestMArie.ipynb
+++ b/TestMArie.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using matplotlib backend: Qt5Agg\n",
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
     {
      "ename": "SyntaxError",
      "evalue": "invalid syntax (functions.py, line 1)",
@@ -22,21 +14,16 @@
      "traceback": [
       "Traceback \u001B[1;36m(most recent call last)\u001B[0m:\n",
       "  File \u001B[0;32m\"C:\\Users\\marie\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001B[0m, line \u001B[0;32m3331\u001B[0m, in \u001B[0;35mrun_code\u001B[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001B[1;36m  File \u001B[1;32m\"<ipython-input-1-df7ef487707e>\"\u001B[1;36m, line \u001B[1;32m4\u001B[1;36m, in \u001B[1;35m<module>\u001B[1;36m\u001B[0m\n\u001B[1;33m    from Functions import functions\u001B[0m\n",
+      "\u001B[1;36m  File \u001B[1;32m\"<ipython-input-8-9b4a43365240>\"\u001B[1;36m, line \u001B[1;32m1\u001B[1;36m, in \u001B[1;35m<module>\u001B[1;36m\u001B[0m\n\u001B[1;33m    from Functions import functions\u001B[0m\n",
       "\u001B[1;36m  File \u001B[1;32m\"C:\\Users\\marie\\Documents\\Studium\\Semester4\\Bioinfo\\Projekt\\Functions\\functions.py\"\u001B[1;36m, line \u001B[1;32m1\u001B[0m\n\u001B[1;33m    %pylab\u001B[0m\n\u001B[1;37m    ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "%pylab\n",
-    "%matplotlib inline\n",
-    "import skimage.io as sk\n",
     "from Functions import functions\n",
     "\n",
-    "img = sk.imread(\"Data/N2DH-GOWT1/img/t01.tif\") #Versuch Bild zu laden\n",
     "\n",
-    "functions.show_image(img, 15, 8)"
+    "functions.sum(2,4)"
    ]
   },
   {
@@ -46,9 +33,9 @@
    "source": [
     "\n",
     "\n",
-    "pathlist = [\"Data/N2DH-GOWT1/img/t01.tif\", \"Data/N2DH-GOWT1/img/t21.tif\", \"Data/N2DH-GOWT1/img/t31.tif\", \"Data/N2DH-GOWT1/img/t39.tif\",\"Data/N2DH-GOWT1/img/t52.tif\",\"Data/N2DH-GOWT1/img/t72.tif\"]\n",
-    "img_l = sk.imread_collection(pathlist)\n",
-    "imshow(img_l)"
+    "#pathlist = [\"Data/N2DH-GOWT1/img/t01.tif\", \"Data/N2DH-GOWT1/img/t21.tif\", \"Data/N2DH-GOWT1/img/t31.tif\", \"Data/N2DH-GOWT1/img/t39.tif\",\"Data/N2DH-GOWT1/img/t52.tif\",\"Data/N2DH-GOWT1/img/t72.tif\"]\n",
+    "#img_l = sk.imread_collection(pathlist)\n",
+    "#imshow(img_l)"
    ],
    "metadata": {
     "collapsed": false,
