--- a/SeededRegionGrowing.ipynb
+++ b/SeededRegionGrowing.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%  #imports\n"
+    }
    },
    "outputs": [
     {
@@ -23,6 +26,27 @@
       "`%matplotlib` prevents importing * from pylab and numpy\n",
       "  \"\\n`%matplotlib` prevents importing * from pylab and numpy\"\n"
      ]
+    }
+   ],
+   "source": [
+    "%pylab\n",
+    "%matplotlib inline\n",
+    "\n",
+    "from Functions import functions as f\n",
+    "import skimage.io as sk\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\marie\\anaconda3\\lib\\site-packages\\skimage\\external\\tifffile\\tifffile.py:2618: RuntimeWarning: py_decodelzw encountered unexpected end of stream\n",
+      "  strip = decompress(strip)\n"
+     ]
     },
     {
      "data": {
@@ -36,21 +60,80 @@
     }
    ],
    "source": [
-    "%pylab\n",
-    "%matplotlib inline\n",
-    "\n",
-    "#import matplotlib.pyplot as plt\n",
-    "#import numpy as np\n",
-    "from Functions import functions as f\n",
-    "import skimage.io as sk\n",
-    "#import matplotlib as mb\n",
-    "import pylab as py\n",
-    "\n",
     "img = sk.imread(\"Data/N2DH-GOWT1/img/t01.tif\") #Bild laden\n",
-    "#imshow(img, \"gray\")\n",
-    "\n",
     "f.show_image(img, 15, 8)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% #import image\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'Functions.functions' has no attribute 'standarddeviation'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-15-2c1defdfe2ed>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m#calculates similarity of every pixel to its nxn neighborhood (standard deviation)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0msd\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstandarddeviation\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m3\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# apply method for testing\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0msd\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0msd\u001B[0m\u001B[1;33m/\u001B[0m\u001B[0mmax\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msd\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mflatten\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# normes standard deviation\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0msimilarity\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m-\u001B[0m\u001B[0msd\u001B[0m \u001B[1;31m# calculates similarity\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[0mshow_image\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msimilarity\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m15\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m8\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mAttributeError\u001B[0m: module 'Functions.functions' has no attribute 'standarddeviation'"
+     ]
+    }
+   ],
+   "source": [
+    "#calculates similarity of every pixel to its nxn neighborhood (standard deviation)\n",
+    "sd = f.standarddeviation(img,3) # apply method for testing\n",
+    "sd = sd/max(sd.flatten()) # normes standard deviation\n",
+    "similarity = 1-sd # calculates similarity\n",
+    "show_image(similarity, 15, 8)\n",
+    "\n",
+    "#calculates relative euclidean distance of pixel to its nxn neighborhood\n",
+    "eurel = f.euclidean_relative(img, 3)\n",
+    "show_image(eurel, 15, 8)\n",
+    "\n",
+    "#calculates relative euclidean distance of pixel to its nxn neighborhood\n",
+    "eu = f.euclidean_n(img, 3)\n",
+    "show_image(eu, 15, 8)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% intermediate results seed selection\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "def seeds(img, T1, T2): # automatic seed selection algorithm\n",
+    "    result = numpy.zeros(img.shape)\n",
+    "    sd_seeds = f.standarddeviation(img,3) # standard deviation\n",
+    "    sd_flat = sd_seeds.flatten() # standard deviation as 1D-array\n",
+    "    similarity_seeds = 1 - sd_seeds/max(sd_flat) # calculates similarity of every pixel to its neighbors\n",
+    "    eurel_seeds = f.euclidean_relative(img, 3) # relative euclidean distance of every pixel to its neighbors\n",
+    "    for p in ndindex(img.shape): # border pixel value is zero\n",
+    "        if similarity_seeds[p] > T1 and eurel_seeds[p] < T2: # compares pixel with threshold\n",
+    "            result[p] = 1 # assigns value 1 to seeds\n",
+    "    return result\n",
+    "\n",
+    "seed_final = seeds(img, 0.4, 20)\n",
+    "show_image(seed_final, 15, 8)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% #automatic seed detection\n"
+    }
+   }
   }
  ],
  "metadata": {
