--- a/SeededRegionGrowing.ipynb
+++ b/SeededRegionGrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -16,15 +16,6 @@
      "text": [
       "Using matplotlib backend: Qt5Agg\n",
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\marie\\anaconda3\\lib\\site-packages\\IPython\\core\\magics\\pylab.py:160: UserWarning: pylab import has clobbered these variables: ['f']\n",
-      "`%matplotlib` prevents importing * from pylab and numpy\n",
-      "  \"\\n`%matplotlib` prevents importing * from pylab and numpy\"\n"
      ]
     }
    ],
@@ -72,17 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'Functions.functions' has no attribute 'standarddeviation'",
+     "ename": "NameError",
+     "evalue": "name 'img' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-20-2c1defdfe2ed>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m#calculates similarity of every pixel to its nxn neighborhood (standard deviation)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0msd\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstandarddeviation\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m3\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# apply method for testing\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0msd\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0msd\u001B[0m\u001B[1;33m/\u001B[0m\u001B[0mmax\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msd\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mflatten\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# normes standard deviation\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0msimilarity\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m-\u001B[0m\u001B[0msd\u001B[0m \u001B[1;31m# calculates similarity\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[0mshow_image\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msimilarity\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m15\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m8\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mAttributeError\u001B[0m: module 'Functions.functions' has no attribute 'standarddeviation'"
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-3-2c1defdfe2ed>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m#calculates similarity of every pixel to its nxn neighborhood (standard deviation)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0msd\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstandarddeviation\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m3\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# apply method for testing\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0msd\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0msd\u001B[0m\u001B[1;33m/\u001B[0m\u001B[0mmax\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msd\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mflatten\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# normes standard deviation\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0msimilarity\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m-\u001B[0m\u001B[0msd\u001B[0m \u001B[1;31m# calculates similarity\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[0mshow_image\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msimilarity\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m15\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m8\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'img' is not defined"
      ]
     }
    ],
@@ -91,15 +82,15 @@
     "sd = f.standarddeviation(img,3) # apply method for testing\n",
     "sd = sd/max(sd.flatten()) # normes standard deviation\n",
     "similarity = 1-sd # calculates similarity\n",
-    "show_image(similarity, 15, 8)\n",
+    "f.show_image(similarity, 15, 8)\n",
     "\n",
     "#calculates relative euclidean distance of pixel to its nxn neighborhood\n",
     "eurel = f.euclidean_relative(img, 3)\n",
-    "show_image(eurel, 15, 8)\n",
+    "f.show_image(eurel, 15, 8)\n",
     "\n",
     "#calculates relative euclidean distance of pixel to its nxn neighborhood\n",
     "eu = f.euclidean_n(img, 3)\n",
-    "show_image(eu, 15, 8)"
+    "f.show_image(eu, 15, 8)"
    ],
    "metadata": {
     "collapsed": false,
@@ -126,7 +117,7 @@
     "    return result\n",
     "\n",
     "seed_final = seeds(img, 0.4, 20)\n",
-    "show_image(seed_final, 15, 8)"
+    "f.show_image(seed_final, 15, 8)"
    ],
    "metadata": {
     "collapsed": false,
