--- a/Test documents/TestMArie.ipynb
+++ b/Test documents/TestMArie.ipynb
@@ -2,40 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (functions.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001B[1;36m(most recent call last)\u001B[0m:\n",
-      "  File \u001B[0;32m\"C:\\Users\\marie\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001B[0m, line \u001B[0;32m3331\u001B[0m, in \u001B[0;35mrun_code\u001B[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001B[1;36m  File \u001B[1;32m\"<ipython-input-8-9b4a43365240>\"\u001B[1;36m, line \u001B[1;32m1\u001B[1;36m, in \u001B[1;35m<module>\u001B[1;36m\u001B[0m\n\u001B[1;33m    from Functions import functions\u001B[0m\n",
-      "\u001B[1;36m  File \u001B[1;32m\"C:\\Users\\marie\\Documents\\Studium\\Semester4\\Bioinfo\\Projekt\\Functions\\functions.py\"\u001B[1;36m, line \u001B[1;32m1\u001B[0m\n\u001B[1;33m    %pylab\u001B[0m\n\u001B[1;37m    ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: Qt5Agg\n",
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\marie\\anaconda3\\lib\\site-packages\\IPython\\core\\magics\\pylab.py:160: UserWarning: pylab import has clobbered these variables: ['f']\n",
+      "`%matplotlib` prevents importing * from pylab and numpy\n",
+      "  \"\\n`%matplotlib` prevents importing * from pylab and numpy\"\n"
      ]
     }
    ],
    "source": [
-    "from Functions import functions\n",
+    "import numpy as np\n",
+    "%pylab\n",
+    "%matplotlib inline\n",
     "\n",
-    "\n",
-    "functions.sum(2,4)"
+    "from Functions import functions as f\n",
+    "import skimage.io as sk\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1024, 1024)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\marie\\anaconda3\\lib\\site-packages\\skimage\\external\\tifffile\\tifffile.py:2618: RuntimeWarning: py_decodelzw encountered unexpected end of stream\n",
+      "  strip = decompress(strip)\n"
+     ]
+    }
+   ],
+   "source": [
+    "img = sk.imread(\"../Data/N2DH-GOWT1/img/t01.tif\") #Bild laden\n",
+    "print (img.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'Functions.functions' has no attribute 'img_resize'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-22-b7b3d38dc2df>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mimg_n\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mimg_resize\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m400\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m400\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[0mf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mshow_image\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_n\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m15\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m8\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mAttributeError\u001B[0m: module 'Functions.functions' has no attribute 'img_resize'"
+     ]
+    }
+   ],
+   "source": [
+    "img_n = f.img_resize(img,400,400)\n",
+    "f.show_image(img_n,15,8)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
+    "new_size = [500,500]\n",
     "\n",
+    "img_n = np.zeros(new_size)\n",
+    "for x in np.ndindex(new_size[0],new_size[1]):\n",
+    "    img_n[x] = img[x]\n",
     "\n",
-    "#pathlist = [\"Data/N2DH-GOWT1/img/t01.tif\", \"Data/N2DH-GOWT1/img/t21.tif\", \"Data/N2DH-GOWT1/img/t31.tif\", \"Data/N2DH-GOWT1/img/t39.tif\",\"Data/N2DH-GOWT1/img/t52.tif\",\"Data/N2DH-GOWT1/img/t72.tif\"]\n",
-    "#img_l = sk.imread_collection(pathlist)\n",
-    "#imshow(img_l)"
+    "f.show_image(img_n, 15, 8)"
    ],
    "metadata": {
     "collapsed": false,
