--- a/Test documents/TestIna.ipynb
+++ b/Test documents/TestIna.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "img = sk.imread(\"Data/N2DH-GOWT1/img/t01.tif\") #Versuch Bild zu laden\n",
     "imshow(img, \"gray\")\n",
-    "colorbar()\n"
+    "colorbar()"
    ],
    "execution_count": 17,
    "outputs": [
@@ -54,6 +54,104 @@
      "output_type": "display_data"
     }
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 3 5 3]\n",
+      " [0 3 7 7]\n",
+      " [5 5 7 3]\n",
+      " [3 2 2 6]]\n",
+      "Counter({3: 5, 5: 3, 7: 3, 2: 2, 4: 1, 0: 1, 6: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "p = int(input(\"Length of matrix: \"))\n",
+    "m = np.random.randint(0,9,(p,p))\n",
+    "print(m)\n",
+    "#list(m.flatten()).count(0)\n",
+    "\n",
+    "import collections\n",
+    "\n",
+    "\n",
+    "\n",
+    "list1 = collections.Counter(m.flatten())\n",
+    "list2 = collections.Counter(m.flatten()).keys()\n",
+    "#for key, value in list1.iteritems():\n",
+    "#    temp = [key,value]\n",
+    "#    dictlist.append(temp)\n",
+    "print(list1)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list1[3])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([(4, 1), (3, 5), (5, 3), (0, 1), (7, 3), (2, 2), (6, 1)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list1.items())\n",
+    "for"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
