--- a/Test documents/Unseeded region growing.ipynb
+++ b/Test documents/Unseeded region growing.ipynb
@@ -32,14 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 85,
    "outputs": [],
    "source": [
     "# Region Array\n",
     "# List with neighbours\n",
     "Ne_total = []\n",
     "regions = np.zeros(img.shape) # array with region number\n",
-    "regions[0,0] = 1 # Startpixel is region number 1"
+    "regions[0,0] = 1 # Startpixel is region number 1\n",
+    "regions[1,1] = 2"
    ],
    "metadata": {
     "collapsed": false,
@@ -50,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 86,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 0), (0, 1)]\n"
+      "[(1, 0), (0, 1), (0, 1), (2, 1), (1, 0), (1, 2)]\n"
      ]
     }
    ],
@@ -95,17 +96,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 92,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# Mittelwert der Intensitäten einer Region\n",
-    "def mean_region(count):\n",
-    "    region_list = []\n",
-    "    region_list.append()\n",
     "\n",
+    "region_max = int(max(regions.flatten()))\n",
+    "print(region_max)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[0.0, 0.0]"
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def mean_region(img, regions):\n",
+    "    mean = []\n",
+    "    for count in range(1,region_max + 1): # Alle Regionen ändern\n",
+    "        region_pixel = []\n",
+    "        intensity = []\n",
+    "        for p in np.ndindex(img.shape):\n",
+    "            if regions[p] == count:\n",
+    "                region_pixel.append(p)\n",
+    "        for l in region_pixel:\n",
+    "            intensity.append(img[l])\n",
+    "        mean.append(sum(intensity)/len(intensity))\n",
+    "    return mean\n",
     "\n",
-    "\n",
-    "\n"
+    "mean_region(img_r, regions)"
    ],
    "metadata": {
     "collapsed": false,
