mean_region aktualisiert

--- a/Test documents/Unseeded region growing.ipynb
+++ b/Test documents/Unseeded region growing.ipynb
@@ -85,7 +85,8 @@
     "    return Ne\n",
     "\n",
     "Ne_total = Ne_total + find_neighbors(img_r, regions)\n",
-    "print(Ne_total)"
+    "print(Ne_total)\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -96,38 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Mittelwert der Intensitäten einer Region\n",
-    "\n",
-    "region_max = int(max(regions.flatten()))\n",
-    "print(region_max)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 94,
    "outputs": [
     {
      "data": {
       "text/plain": "[0.0, 0.0]"
      },
-     "execution_count": 93,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,6 +111,7 @@
    "source": [
     "def mean_region(img, regions):\n",
     "    mean = []\n",
+    "    region_max = int(max(regions.flatten()))\n",
     "    for count in range(1,region_max + 1): # Alle Regionen ändern\n",
     "        region_pixel = []\n",
     "        intensity = []\n",
@@ -173,7 +150,7 @@
     "# Difference measure: Formel 1 Paper, Differenz Intensität Pixel x zu der Durchschnitts-Intensität der Region Ai\n",
     "# Pixel x und Ai müssen aneinander angrenzen\n",
     "\n",
-    "# Differenz von allen Pixeln in Liste T zu allen deren angrenzenden Regionen berechnen\n",
+    "# Differenz von allen Pixeln in Liste Ne_total zu allen deren angrenzenden Regionen berechnen\n",
     "# Pixel mit kleinstem Wert wird zu Pixel z\n",
     "\n",
     "# Differenz von z zu Ai wird mit einem treshold t (wie bestimmen) verglichen\n",
