--- a/SeededRegionGrowing.ipynb
+++ b/SeededRegionGrowing.ipynb
@@ -348,21 +348,47 @@
     "    Ne = []\n",
     "    if p[0] > 0: # Add neighbours to list T, left\n",
     "        a = (p[0]-1, p[1])\n",
-    "        if regions[a] == 0 and a not in Ne:\n",
+    "        if regions[a] == 0:\n",
     "            Ne.append(a)\n",
     "    if p[0] < img.shape[0]: # Add neighbours to list T, right\n",
     "        b = (p[0]+1, p[1])\n",
-    "        if regions[b] == 0 and b not in Ne:\n",
+    "        if regions[b] == 0:\n",
     "            Ne.append(b)\n",
     "    if p[1] > 0: # Add neighbours to list T, up\n",
     "        c = (p[0], p[1]-1)\n",
-    "        if regions[c] == 0 and c not in Ne:\n",
+    "        if regions[c] == 0:\n",
     "            Ne.append(c)\n",
     "    if p[1] < img.shape[1]: # Add neighbours to list T, down\n",
     "        d = (p[0], p[1]+1)\n",
-    "        if regions[d] == 0 and d not in Ne:\n",
+    "        if regions[d] == 0:\n",
     "            Ne.append(d)\n",
     "    return Ne"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "def mean_region(img, regions):\n",
+    "    mean = []\n",
+    "    region_max = int(max(regions.flatten()))\n",
+    "    for count in range(1,region_max + 1): # Alle Regionen ändern\n",
+    "        region_pixel = []\n",
+    "        intensity = []\n",
+    "        for p in np.ndindex(img.shape):\n",
+    "            if regions[p] == count:\n",
+    "                region_pixel.append(p)\n",
+    "        for l in region_pixel:\n",
+    "            intensity.append(img[l])\n",
+    "        mean.append(sum(intensity)/len(intensity))\n",
+    "    return mean"
    ],
    "metadata": {
     "collapsed": false,
@@ -376,12 +402,32 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def calculation_distance(img, list):\n",
+    "def calculation_distance(img, list, regions): # img intensity values, regions is region number\n",
+    "    means = mean_region(img, regions)\n",
     "    nei = []\n",
     "    result = np.ones()\n",
     "    for i in list:\n",
     "        nei = add_neighbors(img, i)\n",
-    "        for j in nei \n",
+    "        distance = []\n",
+    "        for j in nei:\n",
+    "            if regions[j] != 0:\n",
+    "                distance.append((img[j] - means[regions[j]]) / img[j])\n",
+    "        result[i] = min(distance)\n",
+    "        "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def label()\n",
     "        \n",
     "        \n",
     "    \n",
@@ -392,7 +438,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% \n"
+     "name": "#%%\n"
     }
    }
   }
