--- a/SeededRegionGrowing.ipynb
+++ b/SeededRegionGrowing.ipynb
@@ -412,8 +412,7 @@
     "        for j in nei:\n",
     "            if regions[j] != 0:\n",
     "                distance.append((img[j] - means[regions[j]]) / img[j])\n",
-    "        result[i] = min(distance)\n",
-    "        "
+    "        result[i] = min(distance)"
    ],
    "metadata": {
     "collapsed": false,
