--- a/SeededRegionGrowing.ipynb
+++ b/SeededRegionGrowing.ipynb
@@ -412,7 +412,9 @@
     "        for j in nei:\n",
     "            if regions[j] != 0:\n",
     "                distance.append((img[j] - means[regions[j]]) / img[j])\n",
-    "        result[i] = min(distance)"
+    "        if len(distance) != 0:\n",
+    "            result[i] = min(distance)\n",
+    "    return result"
    ],
    "metadata": {
     "collapsed": false,
