--- a/Test documents/Unseeded region growing.ipynb
+++ b/Test documents/Unseeded region growing.ipynb
@@ -112,7 +112,7 @@
     "def mean_region(img, regions):\n",
     "    mean = []\n",
     "    region_max = int(max(regions.flatten()))\n",
-    "    for count in range(1,region_max + 1): # Alle Regionen ändern\n",
+    "    for count in range(1,region_max + 1):\n",
     "        region_pixel = []\n",
     "        intensity = []\n",
     "        for p in np.ndindex(img.shape):\n",
@@ -124,6 +124,25 @@
     "    return mean\n",
     "\n",
     "mean_region(img_r, regions)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def unseeded_difference(img, regions):\n",
+    "    for p in Ne_total:\n",
+    "        neighbour_number\n",
+    "        abs(img[p] - mean_region(img, regions)[REGIONSNUMMER])\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
