--- a/SeededRegionGrowing.ipynb
+++ b/SeededRegionGrowing.ipynb
@@ -345,24 +345,24 @@
    "outputs": [],
    "source": [
     "def add_neighbors(img, p): #p describes pixel for which neighbors need to be added\n",
-    "    Ne = []\n",
+    "    Ne1 = []\n",
     "    if p[0] > 0: # Add neighbours to list T, left\n",
     "        a = (p[0]-1, p[1])\n",
     "        if regions[a] == 0:\n",
-    "            Ne.append(a)\n",
+    "            Ne1.append(a)\n",
     "    if p[0] < img.shape[0]: # Add neighbours to list T, right\n",
     "        b = (p[0]+1, p[1])\n",
     "        if regions[b] == 0:\n",
-    "            Ne.append(b)\n",
+    "            Ne1.append(b)\n",
     "    if p[1] > 0: # Add neighbours to list T, up\n",
     "        c = (p[0], p[1]-1)\n",
     "        if regions[c] == 0:\n",
-    "            Ne.append(c)\n",
+    "            Ne1.append(c)\n",
     "    if p[1] < img.shape[1]: # Add neighbours to list T, down\n",
     "        d = (p[0], p[1]+1)\n",
     "        if regions[d] == 0:\n",
-    "            Ne.append(d)\n",
-    "    return Ne"
+    "            Ne1.append(d)\n",
+    "    return Ne1"
    ],
    "metadata": {
     "collapsed": false,
@@ -402,10 +402,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def calculation_distance(img, list, regions): # img intensity values, regions is region number\n",
+    "def calculation_distance(img, list, regions): # img intensity values, regions is region number, list is list of neighbours\n",
     "    means = mean_region(img, regions)\n",
     "    nei = []\n",
-    "    result = np.ones()\n",
+    "    result = np.ones(img.shape)\n",
     "    for i in list:\n",
     "        nei = add_neighbors(img, i)\n",
     "        distance = []\n",
@@ -428,7 +428,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def label()\n",
+    "def label(distances):\n",
+    "    m = min(distances)\n",
+    "\n",
     "        \n",
     "        \n",
     "    \n",
