Unseeded_region_growing.ipynb weitergemacht

--- a/Doodles/Unseeded_region_growing.ipynb
+++ b/Doodles/Unseeded_region_growing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -32,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "# Region Array\n",
     "# List with neighbours\n",
     "Ne_total = []\n",
-    "regions = np.zeros(img.shape) # array with region number\n",
+    "regions = np.zeros(img_r.shape) # array with region number\n",
     "regions[0,0] = 1 # Startpixel is region number 1\n",
     "regions[1,1] = 2"
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 56,
    "outputs": [
     {
      "name": "stdout",
@@ -97,13 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 57,
    "outputs": [
     {
      "data": {
       "text/plain": "[0.0, 0.0]"
      },
-     "execution_count": 94,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,15 +134,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 69,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 1), (0, 0), (0, 2)]\n"
+     ]
+    }
+   ],
    "source": [
-    "def unseeded_difference(img, regions):\n",
-    "    for p in Ne_total:\n",
-    "        neighbour_number\n",
-    "        abs(img[p] - mean_region(img, regions)[REGIONSNUMMER])\n",
-    "\n",
-    "\n"
+    "# Name kann geändert werden, wenn alle Funktionen das gleiche machen\n",
+    "def unseeded_add_neighbors(img, p): #p describes pixel for which neighbors need to be added\n",
+    "    Ne1 = []\n",
+    "    if p[0] > 0: # Add neighbours to list T, left\n",
+    "        a = (p[0]-1, p[1])\n",
+    "        Ne1.append(a)\n",
+    "    if p[0] < img.shape[0]: # Add neighbours to list T, right\n",
+    "        b = (p[0]+1, p[1])\n",
+    "        Ne1.append(b)\n",
+    "    if p[1] > 0: # Add neighbours to list T, up\n",
+    "        c = (p[0], p[1]-1)\n",
+    "        Ne1.append(c)\n",
+    "    if p[1] < img.shape[1]: # Add neighbours to list T, down\n",
+    "        d = (p[0], p[1]+1)\n",
+    "        Ne1.append(d)\n",
+    "    return Ne1"
    ],
    "metadata": {
     "collapsed": false,
@@ -153,7 +171,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
+   "outputs": [],
+   "source": [
+    "def unseeded_distance(img, list, regions): # img intensity values, regions is region number, list is list of neighbours\n",
+    "    means = mean_region(img, regions)\n",
+    "    result = np.full(img.shape, 500) # Wert 500 damit berechnete Distanzen immer kleiner sind\n",
+    "    for i in list:\n",
+    "        nei = unseeded_add_neighbors(img, i)\n",
+    "        distance = []\n",
+    "        for j in nei:\n",
+    "            if regions[j] != 0:\n",
+    "                distance.append(abs(img[i] - means[int(regions[j] - 1)]))\n",
+    "        if len(distance) != 0:\n",
+    "            result[i] = min(distance)\n",
+    "    return result\n",
+    "\n",
+    "distance = unseeded_distance(img_r, Ne_total, regions)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# z Aussuchen\n",
+    "def unseeded_pixle_pick(distance): # distance ist Ergebnis von unseeded_distance, array mit Distanzen\n",
+    "    pick = []\n",
+    "    min = np.amin(distance) # Minimale Distanz\n",
+    "    for p in np.ndindex(distance.shape): # alle Pixel checken\n",
+    "        if distance[p] == min: # Wenn Distanz minimaler Distanz entspricht\n",
+    "            pick.append(p) # Liste an Pixeln mit minimaler Distanz\n",
+    "        if len(pick) > 0:\n",
+    "            return pick[0] # Erster Pixel wird ausgewählt (haben wir willkürlich festgelegt)\n",
+    "\n",
+    "pick = unseeded_pixle_pick(distance)\n",
+    "print(pick)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 0. ... 0. 0. 0.]\n",
+      " [0. 2. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = 5 # Threshold ist willkürlich festgesetzt\n",
+    "# Regions Zuweisung z\n",
+    "# Distanz nochmal berechnen, zu Nachbarn mit region, und der gleichen Region zuweisen\n",
+    "def unseeded_region_direct(img, regions, distance, pick): # pick ist ausgesuchter Pixel\n",
+    "    if distance[pick] < t:\n",
+    "        means = mean_region(img, regions)\n",
+    "        nei = unseeded_add_neighbors(img, pick)\n",
+    "        dis = []\n",
+    "        for j in nei: # Distanz für Nachbarn wird wieder bestimmt\n",
+    "            if regions[j] != 0:\n",
+    "                dis.append(abs(img[pick] - means[int(regions[j] - 1)]))\n",
+    "            else:\n",
+    "                dis.append(500)\n",
+    "        minimum = min(dis)\n",
+    "        for d in range(0, len(dis)):\n",
+    "            if dis[d] == minimum:\n",
+    "                region_nei = nei[d] # nimmt den letzten Regionswert\n",
+    "        regions[pick] = regions[region_nei] # Regionswert vom nähsten Pixel wird übernommen\n",
+    "    return regions\n",
+    "\n",
+    "test = unseeded_region_direct(img_r, regions, distance, pick)\n",
+    "\n",
+    "print(test)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "outputs": [],
    "source": [
     "# Region A1 festlegen, Liste für alle vorhandenen Regionen erstellen (Listen Ai)\n",
@@ -195,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "outputs": [],
    "source": [],
    "metadata": {
